// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP DNS mapping screen Name field should be disabled and should contain load balancer name in case of import/edit 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="bp3-form-group bp3-disabled lbNameInput"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="azureDnsMapping_name"
                >
                  Provide a name for the Load balancer
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    type="text"
                    value="Mock GCP Load Balancer"
                  />
                </div>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
            >
              ce.co.accessPoint.domainMappingDescription
            </p>
            <div
              class="Layout--horizontal StyledProps--main"
              style="min-height: 300px; justify-content: space-between;"
            >
              <div
                class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="customDomain-1"
                  style="width: 300px; margin-right: 20px;"
                >
                  <label
                    class="bp3-label"
                    for="customDomain"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_customDomain"
                    >
                      Enter Domain name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="customDomain"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="othersHelpTextContainer"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ce.co.accessPoint.helpCenter.heading
                  </p>
                </div>
                <hr />
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                </p>
                <ol
                  type="1"
                >
                  <li>
                    ce.co.accessPoint.helpCenter.step1
                  </li>
                  <li>
                    ce.co.accessPoint.helpCenter.step2
                  </li>
                  <li>
                    ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                  </li>
                </ol>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              data-testid="saveGcpDetails"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Continue
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
              data-testid="cancelBtn"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen render configuration dialog and fill details 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="bp3-form-group lbNameInput"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="azureDnsMapping_name"
                >
                  Provide a name for the Load balancer
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
            >
              ce.co.accessPoint.domainMappingDescription
            </p>
            <div
              class="Layout--horizontal StyledProps--main"
              style="min-height: 300px; justify-content: space-between;"
            >
              <div
                class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
              >
                <div
                  class="bp3-form-group"
                  data-id="customDomain-1"
                  style="width: 300px; margin-right: 20px;"
                >
                  <label
                    class="bp3-label"
                    for="customDomain"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_customDomain"
                    >
                      Enter Domain name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="customDomain"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="othersHelpTextContainer"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ce.co.accessPoint.helpCenter.heading
                  </p>
                </div>
                <hr />
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                </p>
                <ol
                  type="1"
                >
                  <li>
                    ce.co.accessPoint.helpCenter.step1
                  </li>
                  <li>
                    ce.co.accessPoint.helpCenter.step2
                  </li>
                  <li>
                    ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                  </li>
                </ol>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              data-testid="saveGcpDetails"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Continue
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`GCP DNS mapping screen render configuration dialog and fill details 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="bp3-form-group lbNameInput"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="azureDnsMapping_name"
                >
                  Provide a name for the Load balancer
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="GCP AP"
                  />
                </div>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main configInfo StyledProps--color StyledProps--color-grey400"
            >
              ce.co.accessPoint.domainMappingDescription
            </p>
            <div
              class="Layout--horizontal StyledProps--main"
              style="min-height: 300px; justify-content: space-between;"
            >
              <div
                class="Layout--horizontal StyledProps--main customDomainContainer StyledProps--flex StyledProps--flex-alignItems-flex-start"
              >
                <div
                  class="bp3-form-group"
                  data-id="customDomain-1"
                  style="width: 300px; margin-right: 20px;"
                >
                  <label
                    class="bp3-label"
                    for="customDomain"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureDnsMapping_customDomain"
                    >
                      Enter Domain name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="customDomain"
                        type="text"
                        value="custom.domain.test"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="othersHelpTextContainer"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ce.co.accessPoint.helpCenter.heading
                  </p>
                </div>
                <hr />
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.title
                </p>
                <ol
                  type="1"
                >
                  <li>
                    ce.co.accessPoint.helpCenter.step1
                  </li>
                  <li>
                    ce.co.accessPoint.helpCenter.step2
                  </li>
                  <li>
                    ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.mapToDNS.step3
                  </li>
                </ol>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              data-testid="saveGcpDetails"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <div
                class="bp3-spinner bp3-button-spinner"
              >
                <div
                  class="bp3-spinner-animation"
                >
                  <svg
                    height="20"
                    stroke-width="16.00"
                    viewBox="-3.00 -3.00 106.00 106.00"
                    width="20"
                  >
                    <path
                      class="bp3-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp3-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="bp3-button-text"
              >
                Continue
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
